# scorep_plugin_nvml

./: .gitmodules  CMakeLists.txt  README.md
include/: nvml_measurement_thread.hpp  nvml_plugin.hpp  nvml_sampling_plugin.hpp  nvml_sync.hpp  nvml_sync_plugin.hpp  nvml_types.hpp  nvml_wrapper.hpp  plugin.hpp
src/: nvml_sampling_plugin.cpp  plugin.cpp
